# charter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  domain_template.md  feature_request.md
.github/workflows/: ci.yml
charter/: __init__.py  __main__.py  alerting.py  arbitration.py  audit.py  bootstrap.py  cli.py  compliance.py  confidence.py  config.py  context.py  dispute.py  federation.py  generate.py  identity.py  init_cmd.py  join.py  licensing.py  merkle.py  network.py  onboard.py  redteam.py  retention.py  roles.py  siem.py  stamp.py  status.py  team.py  timestamp.py  update.py  verify.py
charter/daemon/: __init__.py  detector.py  injector.py  service.py
charter/mcp_server/: __init__.py  __main__.py  local_model.py
charter/templates/: default.yaml  education.yaml  finance.yaml  healthcare.yaml  personal.yaml
charter/templates/compliance/: eu_ai_act.yaml  ferpa.yaml  gdpr.yaml  hipaa.yaml  iso27001.yaml  nist_ai_rmf.yaml  soc2.yaml  sox.yaml
charter/web/: __init__.py  app.py
charter/web/static/: style.css
charter/web/templates/: account.html  audit.html  base.html  dashboard.html  federation.html  governance.html  identity.html  network.html
docs/: ONBOARDING_FRICTION.md  enterprise-integration-spec.md  index.html
installer/macos/: Charter-0.7.0.pkg  Distribution.xml  build_pkg.sh
installer/macos/resources/: conclusion.html  welcome.html
installer/macos/scripts/: postinstall
installer/windows/: Install-Charter.bat  Install-Charter.ps1
launch/: discord-setup.md  faq.md  growth-and-revenue-strategy.md  morning-briefing.md  readiness-checklist.md  x-launch-posts.md
tests/: conftest.py  test_alerting.py  test_arbitration.py  test_audit.py  test_audit_scheduled.py  test_cli.py  test_compliance.py  test_confidence.py  test_config.py  test_context.py  test_detector.py  test_federation.py  test_generate.py  test_identity.py  test_init.py  test_injector.py  test_licensing.py  test_mcp_configs.py  test_network.py  test_onboard.py  test_redteam.py  test_retention.py  test_roles.py  test_service.py  test_siem.py  test_stamp.py  test_verify.py  test_web.py
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: bootstrap.ts  contextManager.ts  domainDetector.ts  extension.ts  generate.ts  identity.ts  templates.ts  types.ts  updateChecker.ts
