[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charter-governance"
version = "0.8.0"
description = "AI governance layer. Local-first. Open source. Three layers: hard constraints, gradient decisions, self-audit."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "GermPharm LLC", email = "mmaughan@germpharm.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
    "Intended Audience :: Developers",
    "Environment :: Console",
]
keywords = ["ai", "governance", "ethics", "audit", "mcp"]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
    "uvicorn>=0.30",
    "starlette>=0.40",
]
daemon = [
    "flask>=3.0",
    "psutil>=5.9",
]
test = [
    "pytest>=7.0",
]

[project.scripts]
charter = "charter.cli:main"

[project.urls]
Homepage = "https://github.com/germpharm/charter"
Issues = "https://github.com/germpharm/charter/issues"
Documentation = "https://github.com/germpharm/charter#readme"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["vscode-extension*", "tests*"]

[tool.setuptools.package-data]
charter = [
    "templates/*.yaml",
    "web/templates/*.html",
    "web/static/*.css",
]
